GNOME Bugzilla – Bug 617796
[pygi] Clear error if we failed the import
Last modified: 2010-06-08 08:30:36 UTC
Otherwise we leave the exception set which causes bizarre problems later in unrelated code. https://bugzilla.redhat.com/show_bug.cgi?id=569885
Created attachment 160371 [details] [review] [pygi] Clear error if we failed the import
*** Bug 619376 has been marked as a duplicate of this bug. ***
Review of attachment 160371 [details] [review]: Looks great to me, it fixes the tests when pygobject is built with --enable-pygi. Thanks!