Clear error if we failed the import

Otherwise we leave the exception set which causes bizarre problems
later in unrelated code.

https://bugzilla.redhat.com/show_bug.cgi?id=569885

https://bugzilla.gnome.org/show_bug.cgi?id=617796